--- a/method-draw/css/method-draw.css
+++ b/method-draw/css/method-draw.css
@@ -1197,11 +1197,13 @@ box-shadow: inset 0 3px 10px rgba(255, 255, 255, 0.1),
 	padding-right: .3em;
 }
 
-#svg_source_editor {
+#svg_source_editor,
+#add_document_window {
 	display: none;
 }
 
-#svg_source_editor #svg_source_overlay {
+#svg_source_editor #svg_source_overlay,
+#add_document_window #add_document_overlay {
 	position: absolute;
 	top: 0px;
 	right: 0px;
@@ -1226,7 +1228,22 @@ box-shadow: inset 0 3px 10px rgba(255, 255, 255, 0.1),
 	padding: 15px 0;
 }
 
-#svg_source_editor form {
+#add_document_window #add_document_container {
+    position: absolute;
+    top: 25%;
+    bottom:25%;
+    left:25%;
+    right:25%;
+	background-color: #fff;
+	border-radius: 3px;
+	opacity: 1.0;
+	text-align: center;
+	z-index: 6;
+	padding: 15px 0;
+}
+
+#svg_source_editor form,
+#add_document_window form {
 	position: absolute;
 	display: block;
 	top: 15px;
